--- a/backend/.env
+++ b/backend/.env
@@ -1,26 +1,10 @@
-# POSTGRES_URL="dbname=golang_crud user=postgres password=1234 host=localhost sslmode=disable"
-
-
-# Postgres Live
-# DB_HOST=fullstack-postgres
-DB_HOST=127.0.0.1                             # when running the app without docker
+PORT=8080
+DB_HOST=127.0.0.1
 DB_DRIVER=postgres
-API_SECRET=98hbun98h                            # Used for creating a JWT. Can be anything
 DB_USER=ali
 DB_PASSWORD=password
 DB_NAME=packform_api
 DB_PORT=5432
 
-# Used by pgadmin service
 PGADMIN_DEFAULT_EMAIL=ali@admin.com
 PGADMIN_DEFAULT_PASSWORD=password
-
-# # Postgres Test
-# TEST_DB_HOST=postgres_test
-# # TEST_DB_HOST=127.0.0.1                        # when running the app without docker
-# TEST_DB_DRIVER=postgres
-# TEST_API_SECRET=98hbun98h
-# TEST_DB_USER=ali
-# TEST_DB_PASSWORD=password
-# TEST_DB_NAME=packform_api_test
-# TEST_DB_PORT=5432
