--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 go.work
 
 .history
+frontend/node_modules
+frontend/.DS_Store
+frontend/dist
+frontend/dist-ssr
+frontend/*.local
+frontend/.history
