--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,18 +1,25 @@
 version: '3.9'
 services:
-  # app:
-  #   container_name: full_app
-  #   build: .
-  #   ports:
-  #     - 8080:8080
-  #   restart: on-failure
-  #   volumes:
-  #     - api:/usr/src/app/
-  #   depends_on:
-  #     - fullstack-postgres
-  #   networks:
-  #     - fullstack
-
+  app:
+    container_name: full_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8080:8080
+    restart: on-failure
+    environment:
+      - DB_HOST=fullstack-postgres
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - DB_PORT=${DB_PORT}
+    volumes:
+      - api:/usr/src/app/
+    depends_on:
+      - fullstack-postgres
+    networks:
+      - fullstack
 
   fullstack-postgres:
     image: postgres:latest
@@ -21,11 +28,11 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST}
     ports:
       - '5432:5432'
     volumes:
       - database_postgres:/var/lib/postgresql/data
+      - ./dataset:/docker-entrypoint-initdb.d
     networks:
       - fullstack
 
@@ -44,7 +51,7 @@ services:
     restart: unless-stopped
 
 volumes:
-  # api:
+  api:
   database_postgres:
 
 # Networks to be created to facilitate communication between containers
