--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --port 3333",
     "lint": "eslint --ext .ts,vue --ignore-path .gitignore .",
-    "test:unit": "jest --runInBand",
-    "serve": "serve -s dist -l 3333"
+    "test:unit": "jest --runInBand"
   },
   "dependencies": {
     "axios": "^0.24.0",
