--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 3333",
+    "preview": "vite preview",
     "lint": "eslint --ext .ts,vue --ignore-path .gitignore .",
-    "test:unit": "jest --runInBand"
+    "test:unit": "jest --runInBand",
+    "serve": "serve -s dist -l 3333"
   },
   "dependencies": {
     "axios": "^0.24.0",
